force-app/main/default/objects/Leave_Application__c/Leave_Application__c.object-meta.xml
<CustomObject>
    <description>The Leave_Application__c object is designed to manage and track employee leave requests within an organization. This object facilitates the submission, approval, and monitoring of leave applications, ensuring that all leave-related activities are documented and processed efficiently. The object includes fields to specify the type of leave, duration, status, and ensures compliance with company policies and regulations, particularly within the context of a German work environment.</description>
    <label>Leave Application</label>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Leave Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>