force-app/main/default/objects/Leave_Application__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Specifies the end date of the leave period.</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>