force-app/main/default/objects/Leave_Application__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <description>Active if the start and end date are in the current year</description>
    <formula>AND(
    YEAR(Start_Date__c) = YEAR(TODAY()),
    YEAR(End_Date__c) = YEAR(TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>