force-app/main/default/objects/Leave_Application__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Specifies the start date of the leave period. Validation rules ensure that the start date cannot be set in the past.</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>