force-app/main/default/objects/Leave_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Draft&quot;</defaultValue>
    <description>A picklist field to track the status of the leave application (Draft, In Progress, Approved, Not Approved). The default status is &quot;Draft,&quot; which is read-only.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>