force-app/main/default/objects/Leave_Application__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>A text field to specify the type of leave (e.g., vacation, sick leave, parental leave).</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>