force-app/main/default/objects/Leave_Application__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>IF(AND(
    YEAR(Start_Date__c) = YEAR(TODAY()),
    YEAR(End_Date__c) = YEAR(TODAY())
), &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Text</type>
</CustomField>