force-app/main/default/objects/Leave_Application__c/validationRules/Duration_Longer_Than_3_Calendar_Weeks.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration_Longer_Than_3_Calendar_Weeks</fullName>
    <active>true</active>
    <description>Ensures the duration is not longer than 3 calendar weeks.</description>
    <errorConditionFormula>(End_Date__c - Start_Date__c) &gt; 21</errorConditionFormula>
    <errorMessage>Duration cannot be longer than 3 calendar weeks.</errorMessage>
</ValidationRule>