force-app/main/default/objects/Leave_Application__c/validationRules/End_Date_after_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_after_Start_Date</fullName>
    <active>true</active>
    <description>End Date must be after Start Date</description>
    <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
    <errorMessage>End Date must be bigger than Start Date</errorMessage>
</ValidationRule>