force-app/main/default/objects/Leave_Application__c/validationRules/Start_Date_in_the_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_in_the_Past</fullName>
    <active>true</active>
    <description>Prevents the start date from being set in the past.</description>
    <errorConditionFormula>Start_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Start date cannot be in the past</errorMessage>
</ValidationRule>